# internal/app/api/handlers.go
@@ -2,14 +2,13 @@ package api
 
 import (
 	"encoding/json"
-	"errors"
 	"net/http"
 
 	"github.com/Redice1997/http-rest-api/internal/app/model"
-	"github.com/Redice1997/http-rest-api/internal/app/storage"
+	"github.com/Redice1997/http-rest-api/internal/app/service/user"
 )
 
-// handleUserCreate creates a new user
+// handleSignUp creates a new user
 // @Summary Create a new user
 // @Description Creates a new user in the system
 // @Tags auth
@@ -19,22 +18,16 @@ import (
 // @Success 201 {object} UserResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
-// @Router /auth/users [post]
-func (a *api) handleUserCreate() http.HandlerFunc {
-	return func(w http.ResponseWriter, r *http.Request) {
-		req := new(UserCreateRequest)
+// @Router /users/signup [post]
+func (a *api) handleSignUp() http.HandlerFunc {
 
+	var service = user.New(a.db, a.ss, a.lg)
+
+	return func(w http.ResponseWriter, r *http.Request) {
+
+		req := new(UserCreateRequest)
 		if err := json.NewDecoder(r.Body).Decode(req); err != nil {
 			a.error(w, r, http.StatusBadRequest, err)
-			return
-		}
-
-		if _, err := a.db.User().GetByEmail(r.Context(), req.Email); errors.Is(err, storage.ErrRecordNotFound) {
-		} else if err != nil {
-			a.error(w, r, http.StatusInternalServerError, err)
-			return
-		} else {
-			a.error(w, r, http.StatusBadRequest, ErrAlreadyExists)
 			return
 		}
 
@@ -42,20 +35,18 @@ func (a *api) handleUserCreate() http.HandlerFunc {
 			Email:    req.Email,
 			Password: req.Password,
 		}
-
-		if err := a.db.User().Create(r.Context(), u); err != nil {
-			a.error(w, r, http.StatusUnprocessableEntity, err)
-			return
+		if err := service.Save(r.Context(), u); err != nil {
+			a.handleAllErrors(w, r, err)
+		} else {
+			a.respond(w, r, http.StatusCreated, &UserResponse{
+				ID:    u.ID,
+				Email: u.Email,
+			})
 		}
-
-		a.respond(w, r, http.StatusCreated, &UserResponse{
-			ID:    u.ID,
-			Email: u.Email,
-		})
 	}
 }
 
-// handleSessionCreate creates a session for the user
+// handleSignIn creates a session for the user
 // @Summary Enter the system
 // @Description Creates a session for the user
 // @Tags auth
@@ -66,40 +57,30 @@ func (a *api) handleUserCreate() http.HandlerFunc {
 // @Failure 400 {object} ErrorResponse
 // @Failure 401 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
-// @Router /auth/sessions [post]
-func (a *api) handleSessionCreate() http.HandlerFunc {
+// @Router /users/signin [post]
+func (a *api) handleSignIn() http.HandlerFunc {
+
+	var service = user.New(a.db, a.ss, a.lg)
+
 	return func(w http.ResponseWriter, r *http.Request) {
 		req := new(SessionCreateRequest)
-
 		if err := json.NewDecoder(r.Body).Decode(req); err != nil {
 			a.errorNoLog(w, r, http.StatusBadRequest, err)
 			return
 		}
 
-		u, err := a.db.User().GetByEmail(r.Context(), req.Email)
-		if err != nil || !u.ComparePassword(req.Password) {
-			a.errorNoLog(w, r, http.StatusUnauthorized, ErrInvalidEmailOrPassword)
-			return
+		if err := service.CreateHttpSession(w, r, &model.User{
+			Email:    req.Email,
+			Password: req.Password,
+		}); err != nil {
+			a.handleAllErrors(w, r, err)
+		} else {
+			a.respond(w, r, http.StatusOK, nil)
 		}
-
-		session, err := a.sess.Get(r, SessionName)
-		if err != nil {
-			a.error(w, r, http.StatusInternalServerError, err)
-			return
-		}
-
-		session.Values["user_id"] = u.ID
-
-		if err := session.Save(r, w); err != nil {
-			a.error(w, r, http.StatusInternalServerError, err)
-			return
-		}
-
-		a.respond(w, r, http.StatusOK, nil)
 	}
 }
 
-// handleWhoAmI returns information about the current authenticated user
+// handleMe returns information about the current authenticated user
 // @Summary Information about the current authenticated user
 // @Description Returns information about the current authenticated user
 // @Tags auth
@@ -108,18 +89,16 @@ func (a *api) handleSessionCreate() http.HandlerFunc {
 // @Security BearerAuth
 // @Success 200 {object} UserResponse
 // @Failure 401 {object} ErrorResponse
-// @Router /auth/whoami [get]
-func (a *api) handleWhoAmI() http.HandlerFunc {
+// @Router /users/me [get]
+func (a *api) handleMe() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		u := r.Context().Value(CtxUserKey).(*model.User)
-		if u == nil {
-			a.errorNoLog(w, r, http.StatusUnauthorized, ErrUnauthorized)
-			return
+		if u, err := user.Me(r.Context()); err != nil {
+			a.handleAllErrors(w, r, err)
+		} else {
+			a.respond(w, r, http.StatusOK, &UserResponse{
+				ID:    u.ID,
+				Email: u.Email,
+			})
 		}
-
-		a.respond(w, r, http.StatusOK, &UserResponse{
-			ID:    u.ID,
-			Email: u.Email,
-		})
 	}
 }
